--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
 header {
- font-family: 'Prata', serif;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 15px;
  padding: 15px;
- background-color: #FFBF69;
+ border-radius: 5px;
+ box-shadow: 0px 0px 7px rgb(206, 206, 206);
+}
+
+header h1 {
+ font-family: 'Prata', serif;
  color: #FFFFFF;
- box-shadow: 0px 0px 8px rgb(206, 206, 206);
+font-size: 70px;
 }
 
 body {
-    background: rgb(34,193,195);
-    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+ background: rgb(34,193,195);
+ background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
 }
 
 h2 {
@@ -20,74 +24,88 @@ h2 {
 }
 
 section {
-    display: flex;
-    width: 100%;
-    height: 1500px;
-    flex-direction: row;
-    margin-left: 10px;
+ display: flex;
+ width: 100%;
+ height: 1500px;
+ flex-direction: row;
+ margin-left: 10px;
 }
 
 .search-field {
-    display: flex;
-    flex-direction: column;
-    height: 90%;
-    width: 20%;
-    background-color: white;
-    margin: 20px;
-    border-radius: 5px;
-    align-items: center;
+ display: flex;
+ flex-direction: column;
+ height: 90%;
+ width: 20%;
+ background-color: white;
+ opacity: 0.8;
+ margin: 20px;
+ border-radius: 5px;
+ align-items: center;
+ box-shadow: 0px 0px 7px rgb(206, 206, 206);
 }
 
 form {
-    font-family: 'Old Standard TT', serif;
+ font-family: 'Old Standard TT', serif;
 }
 
 input,
 .btn {
-    border-radius: 5px;
-    border: solid #FFBF69;
-    border-style: outset;
-    height: 30px;
+ border-radius: 5px;
+ border: solid #FFBF69;
+ border-style: outset;
+ height: 30px;
 }
 
 .btn {
-    justify-content: center;
-    color: black;
+ justify-content: center;
+ color: black;
 }
 
 .btn:hover {
-    background-color: #FFBF69;
-    border: #FFBF69;
+ background-color: #FFBF69;
+ border: #FFBF69;
+}
+
+.city-list {
+ font-family: 'Prata', serif;
+ list-style: none;
 }
 
 .weather-display {
-    display: flex;
-    flex-direction: column;
-    height: 70%;
-    width: 65%;
+ display: flex;
+ flex-direction: column;
+ height: 70%;
+ width: 65%;
 }
 
 .weather-info {
-    display: flex;
-    flex-direction: column;
-    height: 40%;
-    margin: 20px;
-    background-color: white;
-    border-radius: 5px;
-    justify-content: space-around;
+ display: flex;
+ flex-direction: column;
+ height: 40%;
+ margin: 20px;
+ background-color: white;
+ opacity: 0.8;
+ border-radius: 5px;
+ box-shadow: 0px 0px 7px rgb(206, 206, 206);
+}
+
+.weather {
+ font-family: 'Old Standard TT', serif;
 }
 
 .weather-imgs {
-    display: flex;
-    flex-direction: column;
-    height: 60%;
-    margin: 20px;
-    background-color: white;
-    border-radius: 5px;
+ display: flex;
+ flex-direction: column;
+ height: 60%;
+ margin: 20px;
+ background-color: white;
+ opacity: 0.8;
+ border-radius: 5px;
+ box-shadow: 0px 0px 7px rgb(206, 206, 206);
 }
 
 .weather-imgs-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+ display: flex;
+ flex-direction: row;
+ justify-content: space-around;
 }
