added weather icon to ajax request

--- a/style.css
+++ b/style.css
@@ -19,10 +19,6 @@ body {
  background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
 }
 
-h2 {
- font-family: 'Old Standard TT', serif;
-}
-
 section {
  display: flex;
  width: 100%;
@@ -34,7 +30,7 @@ section {
 .search-field {
  display: flex;
  flex-direction: column;
- height: 90%;
+ height: 70%;
  width: 20%;
  background-color: white;
  opacity: 0.8;
@@ -54,11 +50,7 @@ input,
  border: solid #FFBF69;
  border-style: outset;
  height: 30px;
-}
-
-.btn {
- justify-content: center;
- color: black;
+ color: black; 
 }
 
 .btn:hover {
@@ -90,22 +82,34 @@ input,
 }
 
 .weather {
+ padding: 20px;
+ margin: 20px;
  font-family: 'Old Standard TT', serif;
 }
 
 .weather-imgs {
  display: flex;
  flex-direction: column;
- height: 60%;
+ height: 30%;
  margin: 20px;
  background-color: white;
  opacity: 0.8;
  border-radius: 5px;
  box-shadow: 0px 0px 7px rgb(206, 206, 206);
+ font-family: 'Old Standard TT', serif;
 }
 
 .weather-imgs-content {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
+ align-items: stretch;
+}
+
+.weatherslot {
+ background: rgb(34,193,195);
+ background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+ border-radius: 5px;
+ box-shadow: 0px 0px 5px rgb(206, 206, 206);
+ font-family: 'Prata', serif;
 }
