--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,18 @@ header {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	position: sticky;
+	top: 0;
+	background-color: rgb(34, 193, 195);
+	z-index: 2;
 	margin: 15px;
 	padding: 15px;
 	border-radius: 5px;
 	box-shadow: 0px 0px 7px rgb(206, 206, 206);
+}
+
+header:hover {
+	cursor: pointer;
 }
 
 header h1 {
